# SS-GNN

./: .gitignore  Dev_checklist.md  README.md  RESEARCH_PLAN.md  main.py  run_comparison.sh  run_experiments.sh  sweep_runner.py  test_molhiv.py
configs/: default.json  mutag-gin.json  new_config.json
notebooks/: SS-GNN.ipynb  Subgraphs Visualization.ipynb  new_study.ipynb  ss-gnn-diagnosis.ipynb  wl_and_ss-gnn.ipynb
scripts/: run_phase1_overnight.sh  run_sle_gnn_experiments.sh
src/ss_gnn/: pyproject.toml  setup.py
src/ss_gnn/ss_gnn/: __init__.py  ss_gnn.py
sweeps/: phase2_1_k_sweep.yaml  phase2_2_m_sweep.yaml  phase2_3_temp_sweep.yaml  phase2_mutag.yaml
tests/: conftest.py  test_apx_ugs.py  test_bucket_weights.py  test_cache_performance.py  test_compare_samplers.py  test_dataset_sanity.py  test_debug_sampling.py  test_diagnostics.py  test_epsilon_sampler.py  test_reproducibility.py  test_rwr_profiler.py  test_sample_batch.py  test_sampler.py  test_ugs_qm9_completeness.py  test_ugs_uniformity_proteins.py  test_uniform_feature_gathering.py  test_uniform_gnn_integration.py  test_uniform_sampler.py  test_uniform_sampler_larger_molecules.py  test_uniformity.py  test_uniformity_analysis.py
tools/: 3d_graph_view.py  README.md  README_profile_sampler.md  README_profile_sampler_dataset.md  build_wl_vocab.py  diagnose_ss_gnn.py  evaluate_checkpoint.py  graph.html  graphlet_analysis.py  interclass_divergence.py  investigate_graph_embeddings.py  measure_subgraph_divergence.py  profile_sampler_cv.py  profile_sampler_dataset.py  profile_sampler_validity.py  subgraphs.html  (+1 more)
(+279 files in other folders)
