[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ss_gnn"
version = "0.1.0"
description = "Subgraph sampling-based graph neural network."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = []  # add runtime deps if any

[tool.setuptools.packages.find]
where = ["."]
